# Projeto-eng-dados-Shopflow

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
airflow/: __init__.py
airflow/dags/: data_quality_dag.py  ecommerce_etl_dag.py
dashboard/: index.html
data/clean/: customers_clean.parquet  orders_clean.parquet  products_clean.parquet
data/gold/: dim_customer.parquet  dim_date.parquet  dim_product.parquet  fact_orders.parquet
data/raw/: .gitkeep
data/reports/: dq_report_20260701_090406.txt  dq_report_20260701_090441.txt  dq_report_20260701_090502.txt
data/schemas/: .gitkeep  star_schema.sql
docs/: .gitkeep  manual_engenharia_dados.md  setup_guide.md
infrastructure/: Dockerfile  docker-compose.yml  init-db.sql
scripts/: .gitkeep  generate_data.py
src/: __init__.py  main.py
src/extract/: __init__.py  api_extractor.py  csv_extractor.py  data_generator.py
src/load/: __init__.py  rds_loader.py  s3_loader.py
src/models/: __init__.py  dim_customer.py  dim_date.py  dim_product.py  fact_orders.py
src/quality/: __init__.py  data_quality_checker.py
src/quality/expectations/: customers_expectations.json  orders_expectations.json  products_expectations.json
src/transform/: __init__.py  bronze_to_silver.py  silver_to_gold.py  transformers.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py
tests/unit/: test_data_quality.py  test_extractors.py  test_loaders.py  test_transformers.py
